--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 # MySQL DB parameters
-url = jdbc:mysql://localhost:3306/grade_management?useSSL=false
-user = user_grade_management
+url = jdbc:mysql://localhost:3306/erp?useSSL=false
+user = user_erp
 password = rootroot
