이니셜라이즈 private 으로

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 
 jar {
     version = 1.0
-    mainClassName= 'erp.Erp'
+    mainClassName= 'erp.Main'
     baseName= 'Erp'
     appendix = 'bin'
     
